--- a/MediaLibrary.csproj
+++ b/MediaLibrary.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="NLog" Version="5.1.1" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="5.1.1" />
   </ItemGroup>
 
 </Project>
